https://bugs.webkit.org/show_bug.cgi?id=45957, fix regression in column rules stacking test.

Reviewed by Simon Fraser.

WebCore:

Rewrite how the pagination bit gets set in RenderLayers, since it was totally broken and not
accounting for whether or not the columns block was even in the layer's containing block
hierarchy.

* rendering/RenderLayer.cpp:
(WebCore::checkContainingBlockChainForPagination):
(WebCore::RenderLayer::updatePagination):

LayoutTests:

* platform/mac/fast/multicol/column-rules-stacking-expected.checksum:
* platform/mac/fast/multicol/column-rules-stacking-expected.png:



Canonical link: https://commits.webkit.org/58771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68069 268f45cc-cd09-0410-ab3c-d52691b4dbfc